syntax = "proto3";

package logistica;

service LogisticaService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc GenerarOrdenPyme (OrdenPyme) returns (SeguimientoPyme){}
  rpc GenerarOrdenRetail (OrdenRetail) returns (SeguimientoRetail){}
}

message OrdenPyme {
  string Id = 1;
  string Producto = 2;
  int32 Valor = 3;
  string Origen = 4;
  string Destino = 5;
  int32 Prioritario = 6;
}

message SeguimientoPyme {
  int32 Id = 1;
}

message OrdenRetail {
  string Id = 1;
  string Producto = 2;
  int32 Valor = 3;
  string Origen = 4;
  string Destino = 5;
}

message SeguimientoRetail{
  int32 Id = 1;
}


message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
